--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "braintree": "^3.13.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "nodemailer": "^6.9.1",
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "stripe": "^12.0.0"
   }
 }
